force-app/main/default/objects/Accounting_Data__c/Accounting_Data__c.object-meta.xml
<CustomObject>
    <description>Object created to provide data for FISCAL report</description>
    <label>Accounting Data</label>
    <nameField>
        <displayFormat>AD-{00000000}</displayFormat>
        <label>Accounting Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>