force-app/main/default/objects/Accounting_Data__c/fields/Address_Seq_Num__c.field-meta.xml
<CustomField>
    <fullName>Address_Seq_Num__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Address Sequence Number

Customer address location for the receivable where the invoice was sent or where the customer correspondence may be sent.</description>
    <inlineHelpText>Must be a valid customer address sequence number based on the FI$Cal Customer setup (e.g. 1, 2, 25).

If not provided, field will default from customer bill to primary address.</inlineHelpText>
    <label>Address_Seq_Num</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>