force-app/main/default/objects/Accounting_Data__c/fields/Affiliate_Intra1__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Intra1__c</fullName>
    <description>Fund Affiliate</description>
    <label>Affiliate_Intra1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>