force-app/main/default/objects/Accounting_Data__c/fields/Budget_Ref__c.field-meta.xml
<CustomField>
    <fullName>Budget_Ref__c</fullName>
    <label>Budget_Ref</label>
    <length>8</length>
    <type>Text</type>
</CustomField>