force-app/main/default/objects/Accounting_Data__c/fields/BUSINESS_UNIT_PC__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_UNIT_PC__c</fullName>
    <label>BUSINESS_UNIT_PC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>