force-app/main/default/objects/Accounting_Data__c/fields/Collection_ChkBox__c.field-meta.xml
<CustomField>
    <fullName>Collection_ChkBox__c</fullName>
    <defaultValue>'N'</defaultValue>
    <description>Collection Checkbox

Indicates if an item is in collection.</description>
    <inlineHelpText>Y
N (default)
Status changes to Referred to JEU</inlineHelpText>
    <label>Collection_ChkBox</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>