force-app/main/default/objects/Accounting_Data__c/fields/Collection_Dt__c.field-meta.xml
<CustomField>
    <fullName>Collection_Dt__c</fullName>
    <description>Collection Date

Date when the item was sent to the collection agency.</description>
    <inlineHelpText>COLLECTION_DT is required when COLLECTION_CHKBOX is 'Y'.

COLLECTION_DT must be blank when COLLECTION_CHKBOX is 'N'.</inlineHelpText>
    <label>Collection_Dt</label>
    <type>Date</type>
</CustomField>