force-app/main/default/objects/Accounting_Data__c/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <description>Collection Checkbox

Indicates if an item is in collection.</description>
    <formula>IF( Collection_ChkBox__c = 'Y','Referred to JEU', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Y
N (default)
Status changes to Referred to JEU</inlineHelpText>
    <label>Collection_Status</label>
    <type>Text</type>
</CustomField>