force-app/main/default/objects/Accounting_Data__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <description>Counter to count group Seq</description>
    <label>Counter</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>