force-app/main/default/objects/Accounting_Data__c/fields/Dispute_Chkbox__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Chkbox__c</fullName>
    <defaultValue>'N'</defaultValue>
    <description>Dispute Checkbox

Indicates if an item is in dispute</description>
    <inlineHelpText>Y
N (default)
When status on case issue is changed to Under Appeal</inlineHelpText>
    <label>Dispute_Chkbox</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>