force-app/main/default/objects/Accounting_Data__c/fields/Dst_Seq_Num__c.field-meta.xml
<CustomField>
    <fullName>Dst_Seq_Num__c</fullName>
    <description>Distribution Sequence Number

Represents Distribution rows for each receivable.</description>
    <formula>IF( System_Defined__c = 'A', 100,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Must be unique within a Group Sequence number.</inlineHelpText>
    <label>Dst_Seq_Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>