force-app/main/default/objects/Accounting_Data__c/fields/Entry_Amt__c.field-meta.xml
<CustomField>
    <fullName>Entry_Amt__c</fullName>
    <description>Entry Amount

Amount associated with the open item/receivable.</description>
    <formula>IF( OR(ISPICKVAL( Entry_Type__c, "CR"),ISPICKVAL( Entry_Type__c, "CRYEC")),0 -  ABS(Monetary_Amount__c),ABS(Monetary_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Daily difference of the penalty assessed amount to the previous amount</inlineHelpText>
    <label>Entry_Amt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>