force-app/main/default/objects/Accounting_Data__c/fields/Item_Line__c.field-meta.xml
<CustomField>
    <fullName>Item_Line__c</fullName>
    <description>ITEM and ITEM_LINE combination must be unique for a particular business unit and customer combination in the file.

ITEM_LINE will default to 0 if value is not provided.</description>
    <formula>IF(OR((MONTH(TODAY())&lt;7) &amp;&amp; (VALUE( Case_Issue__r.Fiscal_Year__c ))&lt;(YEAR(TODAY())-2),(MONTH(TODAY())&gt;6) &amp;&amp; (VALUE( Case_Issue__r.Fiscal_Year__c ))&lt;=(YEAR(TODAY())-2)),
(CASE ( Case_Issue__r.Accounting_Modification__c, "4172220", CASE( Entry_Reason__c , "ERROR", 8, "MISC", 8, "APEAL", 8, "RCLAS", 8, "INCRS", 8, "DECRS", 8, "CONTG", 7, 8), CASE( Entry_Reason__c , "ERROR", 3, "MISC", 3, "APEAL", 3, "RCLAS", 3, "INCRS", 3, "DECRS", 3, "CONTG", 2, 3))),
(CASE ( Case_Issue__r.Accounting_Modification__c, "4172220", CASE( Entry_Reason__c , "ERROR", 6, "MISC", 6, "APEAL", 6, "RCLAS", 6, "INCRS", 6, "DECRS", 6, "CONTG", 7, "PMT-UA", 7, "PMT", 6, 8), CASE( Entry_Reason__c ,"ERROR", 1, "MISC", 1, "APEAL", 1, "RCLAS", 1, "INCRS", 1, "DECRS", 1, "CONTG", 2, "PMT-UA", 2, "PMT",1, 3))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If(Entry Type = Misc or Appeal, Item Line =1)
If(Entry Type = Contg, Item line = 2)
if(Entry Type = Arot, Item line = 3)</inlineHelpText>
    <label>Item_Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>