force-app/main/default/objects/Accounting_Data__c/fields/Post_Action__c.field-meta.xml
<CustomField>
    <fullName>Post_Action__c</fullName>
    <defaultValue>'L'</defaultValue>
    <description>Posting Action for the pending group.

Indicates if the loaded pending group will be ready to post by AR Update</description>
    <inlineHelpText>L =  Batch Standard
A =  Do Not Post</inlineHelpText>
    <label>Post_Action</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>