force-app/main/default/objects/Accounting_Data__c/fields/Pymnt_Terms_Cd__c.field-meta.xml
<CustomField>
    <fullName>Pymnt_Terms_Cd__c</fullName>
    <defaultValue>'NET15'</defaultValue>
    <description>Payment Terms for an open item. 

This is used to calculate the due date for the open item.</description>
    <inlineHelpText>Either PYMNT_TERMS_CD or DUE_DT must be provided.  

PYMNT_TERMS_CD must be populated if DUE_DT is left blank (the due date will be calculated through ASOF_DT and the Payment Term.).</inlineHelpText>
    <label>Pymnt_Terms_Cd</label>
    <length>6</length>
    <type>Text</type>
</CustomField>