force-app/main/default/objects/Accounting_Data__c/fields/System_Defined__c.field-meta.xml
<CustomField>
    <fullName>System_Defined__c</fullName>
    <description>Indicates if the distribution accounting line is a User Defined Line (e.g. a revenue / reimbursement / abatement distribution line) or an AR line</description>
    <formula>IF( OR( Account__c = '1109300',Account__c = '1200000',Account__c = '1209900',Account__c = '1209400'), 'A','U')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Entry Type:  DR &amp;&amp; Monetary: + =  A
Entry Type:  DR &amp;&amp; Monetary: -  =  U
Entry Type:  CR &amp;&amp; Monetary: + =  U
Entry Type:  DR &amp;&amp; Monetary: -  =  A</inlineHelpText>
    <label>System_Defined</label>
    <type>Text</type>
</CustomField>