force-app/main/default/objects/Accounting_Data__c/fields/Uniq_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Uniq_Group_ID__c</fullName>
    <description>Used to identify pairs of records for data processing purposes. NOT a FISCAL field.</description>
    <label>Uniq Group ID</label>
    <type>DateTime</type>
</CustomField>