force-app/main/default/objects/Accounting_Data__c/fields/USER_DT1__c.field-meta.xml
<CustomField>
    <fullName>USER_DT1__c</fullName>
    <description>User Date 1

Date associated with the payroll period for an Employee AR open item.</description>
    <label>USER_DT1</label>
    <type>Date</type>
</CustomField>