force-app/main/default/objects/Accounting_Data__c/fields/USER_DT2__c.field-meta.xml
<CustomField>
    <fullName>USER_DT2__c</fullName>
    <description>User Date 2

Refund request date.</description>
    <label>USER_DT2</label>
    <type>Date</type>
</CustomField>