force-app/main/default/objects/Accounting_Data__c/fields/USER_DT3__c.field-meta.xml
<CustomField>
    <fullName>USER_DT3__c</fullName>
    <description>User Date 3

Date for when the open item has been sent to the Franchise Tax Board for collection for the first time.</description>
    <label>USER_DT3</label>
    <type>Date</type>
</CustomField>