force-app/main/default/objects/Accounting_Data__c/fields/Virtual_Column__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Column__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Virtual_Column</label>
    <type>Checkbox</type>
</CustomField>