force-app/main/default/objects/Accounting_Data__c/fields/X121_180_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X121_180_Days_Past_Due__c</fullName>
    <formula>if(AND(Age__c &gt; 135,Age__c &lt;= 195), Monetary_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>121-180 Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>