force-app/main/default/objects/Accounting_Data__c/fields/X181_365_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X181_365_Days_Past_Due__c</fullName>
    <formula>if(AND(Age__c &gt; 195,Age__c &lt;= 380), Monetary_Amount__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>181-365 Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>