force-app/main/default/objects/Accounting_Data__c/fields/ZZ_DEPT_USE_2__c.field-meta.xml
<CustomField>
    <fullName>ZZ_DEPT_USE_2__c</fullName>
    <label>ZZ_DEPT_USE_2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>