force-app/main/default/objects/Accounting_Data__c/fields/ZZ_LOCATION__c.field-meta.xml
<CustomField>
    <fullName>ZZ_LOCATION__c</fullName>
    <label>ZZ_LOCATION</label>
    <length>20</length>
    <type>Text</type>
</CustomField>