force-app/main/default/objects/Accounting_Data__c/fields/ZZ_MULTIPURPOSE__c.field-meta.xml
<CustomField>
    <fullName>ZZ_MULTIPURPOSE__c</fullName>
    <label>ZZ_MULTIPURPOSE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>