force-app/main/default/objects/Accounting_Data__c/fields/ZZ_OBJ_DETAIL__c.field-meta.xml
<CustomField>
    <fullName>ZZ_OBJ_DETAIL__c</fullName>
    <label>ZZ_OBJ_DETAIL</label>
    <length>18</length>
    <type>Text</type>
</CustomField>