force-app/main/default/objects/Accounting_Data__c/fields/ZZ_ORG_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZZ_ORG_CODE__c</fullName>
    <label>ZZ_ORG_CODE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>