force-app/main/default/objects/Accounting_Data__c/fields/ZZ_PROGRAM__c.field-meta.xml
<CustomField>
    <fullName>ZZ_PROGRAM__c</fullName>
    <label>ZZ_PROGRAM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>