force-app/main/default/objects/Accounting_Data__c/fields/ZZ_PROJECT__c.field-meta.xml
<CustomField>
    <fullName>ZZ_PROJECT__c</fullName>
    <label>ZZ_PROJECT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>