force-app/main/default/objects/Accounting_Data__c/fields/ZZ_SUBSIDIARY__c.field-meta.xml
<CustomField>
    <fullName>ZZ_SUBSIDIARY__c</fullName>
    <label>ZZ_SUBSIDIARY</label>
    <length>18</length>
    <type>Text</type>
</CustomField>