force-app/main/default/objects/Accounting_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type_of_event__c</columns>
    <columns>Monetary_Amount__c</columns>
    <columns>Entry_Type__c</columns>
    <columns>Entry_Reason__c</columns>
    <columns>Group_Seq_Num__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>